refac: refactor checkin